fixed spacing on page not found

--- a/src/styles/pages/PagesNotFound.scss
+++ b/src/styles/pages/PagesNotFound.scss
@@ -1,4 +1,4 @@
 #pages-not-found {
-  height: calc(100vh - 285px);
+  height: calc(100vh - 263px);
 
 }
